--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-ui": "^2.4.3",
     "vue": "^2.5.2",
+    "vue-agile": "^0.3.7",
     "vue-router": "^3.0.1",
     "vuetify": "^1.1.0",
     "vuex": "^3.0.1"
