--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.4.3",
+    "vee-validate": "^2.1.0-beta.5",
     "vue": "^2.5.2",
     "vue-agile": "^0.3.7",
     "vue-router": "^3.0.1",
