--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vee-validate": "^2.1.0-beta.5",
     "vue": "^2.5.2",
     "vue-agile": "^0.3.7",
+    "vue-hotel-datepicker": "git+https://github.com/northwalker/vue-hotel-datepicker.git",
     "vue-router": "^3.0.1",
     "vuetify": "^1.1.0",
     "vuex": "^3.0.1"
@@ -48,7 +49,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -64,7 +65,7 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
+    "webpack": "^3.12.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
