--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vee-validate": "^2.1.0-beta.5",
     "vue": "^2.5.2",
     "vue-hotel-datepicker": "git+https://github.com/northwalker/vue-hotel-datepicker.git",
+    "vue-rate": "^2.1.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.1.1",
     "vuex": "^3.0.1"
