--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-hotel-datepicker": "git+https://github.com/northwalker/vue-hotel-datepicker.git",
     "vue-router": "^3.0.1",
     "vue-star-rating": "^1.6.0",
+    "vue2-google-maps": "^0.10.0",
     "vuetify": "^1.1.1",
     "vuex": "^3.0.1"
   },
